<resources>
    <string name="app_name">TracoShop</string>
    <string name="network_error_message">Network Error</string>
    <string name="error">Error</string>

    <string name="checkout">Checkout</string>
    <string name="add">Add</string>


    <string name="continuee">Continue</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="number">Number</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot password</string>
    <string name="request_account">Request Account</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="rate_us">Rate Us</string>
    <string name="log_out">Log out</string>


    <!--Drawer list items-->
    <string name="profile">Profile</string>
    <string name="suppliers">Select Suppliers</string>
    <string name="locations">Locations</string>
    <string name="request_returns">Request Returns</string>
    <string name="payments">Payments</string>

    <string name="search_products">Search products</string>
    <string name="cart">Cart</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="select_delivery_time">Select Delivery Time</string>
    <string name="add_more_products">Add More Products</string>

    <string name="select_destination">Select Destination</string>
    <string name="ads">Ads</string>
    <string name="select_supplier">Select Supplier</string>
    <string name="search_suppliers">Search Suppliers</string>
    <string name="no_results_found">No results found</string>
    <string name="select_customer">Select Customer</string>
    <string name="customers">Select Customers</string>
    <string name="bengaluru">Bengaluru, India</string>
    <string name="purchase">Purchase</string>
    <string name="orders">Orders</string>
    <string name="returns">Returns</string>
    <string name="customer_id">Customer ID</string>
    <string name="contactNo">Contact Number</string>
    <string name="address">Address</string>
    <string name="scale_type_not_supported">scale type not supported</string>
    <string name="adjust_view_not_supported">Adjust view not supported</string>
    <string name="search_destination">Search Destination</string>

</resources>
