<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorHomeScreenBg"
        android:orientation="vertical">

        <include layout="@layout/layout_toolbar_homescreen" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:background="@drawable/shape_rectangle_white"
            android:padding="@dimen/margin_10dp">


            <EditText
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:hint="@string/search_suppliers"
                android:singleLine="true"
                android:textSize="@dimen/text_size_18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@android:drawable/ic_menu_search" />


        </RelativeLayout>

        <TextView
            android:id="@+id/tvBusinessType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:text="@string/select_customer"
            android:textColor="#393939"
            android:textSize="@dimen/text_size_24sp"
            android:visibility="visible" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:visibility="visible" />

        <RelativeLayout
            android:id="@+id/rlNOResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/no_results_found"
                android:textColor="#393939"
                android:textSize="@dimen/text_size_24sp" />

        </RelativeLayout>


    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBlue">

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="@dimen/ic_close_width"
                android:layout_height="@dimen/ic_close_height"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                android:layout_marginLeft="@dimen/margin_20dp"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginTop="@dimen/margin_16dp"
                app:srcCompat="@drawable/ic_drawer_close" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/margin_25dp"
                android:layout_marginRight="@dimen/margin_25dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_18sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvDrawer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_122dp">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tvRateUs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tvLogout"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:layout_marginLeft="@dimen/margin_20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/rate_us"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_18sp" />

            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tvRateUs"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/margin_30dp"
                android:fontFamily="@font/roboto"
                android:text="@string/log_out"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_18sp" />

        </RelativeLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>